# wrapperbot

./: .gitignore  README.md  flake.nix  pyproject.toml
wrapperbot/: __main__.py  command.py  reply.py
